--- a/newernamemaker.html
+++ b/newernamemaker.html
@@ -53,7 +53,7 @@
           .catch(function (error) {
             btn.disabled = false;
             let resultDiv = document.getElementById('result')
-            resultDiv.innerHTML = '씨ㅣ발 좆버그ㅋㅋ'
+            resultDiv.innerHTML = '버그 났다!'
             console.error(error)
           })
       }
