--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <script>
       function search() {
         const api_key =
-          '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'
+          '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'
         const btn = document.getElementById('btn');
         btn.disabled = true;
         const names = document.getElementById('names').value;
         const keywords = document.getElementById('keywords').value;
         const messages = [
           { role: 'system', content: 'You are a helpful assistant.' },
-          { role: 'user', content: names + ', ' + keywords + '의 두 개 키워드로 웃긴 닉네임을 생성해줘. 단, 대한민국의 고등학교인 세종과학예술영재학교와 관련된 닉네임이어야 해. 닉네임의 조건은 다음과 같아. 1.  정확히 여섯개의 단어를 포함할 것. 2. 내가 준 두 개의 키워드를 반드시 포함할 것. 3. 이외에 전혀 관련없는 많은 단어들을 나열하여 웃기게 만들 것. 4. 첫 번째 키워드는 사람 이름이고, 두 번째 키워드는 그냥 단어이다. 첫 번째 사람의 별명을 만드는 것. 5. 마지막 단어는 명사로 끝낼 것. 6. 문장이 아닌 여러 개의 단어를 붙인 단어를 만들 것. 6. 세종과학예술영재학교에 관련되게 만들 것. 설명을 출력하지 말고 반드시 ㄹㅇ 꼭 진짜로 ONLY 별명만 출력해. 특수문자와 띄어쓰기 별명에 넣지 말고 꼭 한글만 사용해.' },
+          { role: 'user', content: names + ', ' + keywords + '의 두 개 키워드로 웃긴 닉네임 생성해줘. 닉네임은 한 개의 긴, 수식어가 붙은 명사 형태면 좋겠어. 닉네임에 키워드가 모두 그대로 포함되어야 한다. 그리고 설명하려고 하지 말고 그냥 닉네임 한 개 그 자체만 출력해줘' },
         ]
         const config = {
           headers: {
