--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           .catch(function (error) {
             btn.disabled = false;
             let resultDiv = document.getElementById('result')
-            resultDiv.innerHTML = '씨ㅣ발 좆버그ㅋㅋ'
+            resultDiv.innerHTML = '사장님 여기 버그가 있어요'
             console.error(error)
           })
       }
