--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
     </style>
   </head>
-  <body>
+  <body align=center>
     <h1>닉 생 성 기</h1>
     <label for="names">이름:</label>
     <input type="text" id="names" name="names" required />
