--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      body {
         background-repeat: no-repeat;
         background-image: url( "https://www.sjsori.com/news/photo/201911/40411_48341_3957.jpg" );
-        background-size:cover;
+        background-size: 300px 150px;
       }
     </style>
   </head>
