--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <title>닉 생 성 기</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <style>
+      .loader {
+        border: 5px solid #f3f3f3;
+        border-top: 5px solid #3498db;
+        border-radius: 50%;
+        width: 30px;
+        height: 40px;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
      body {
         background-repeat: no-repeat;
         background-image: url( "https://www.sjsori.com/news/photo/201911/40411_48341_3957.jpg" );
@@ -19,6 +36,10 @@
     <label for="keywords">키워드:</label>
     <input type="text" id="keywords" name="keywords" required />
     <button id="btn" onclick="search()">입력</button>
+    <div id="loadingMessage" style="display: none;">
+      <p>Wait a Second...</p>
+      <div class="loader"></div>
+    </div>
     <br /><br />
     <div id="result"></div>
     <script>
@@ -26,8 +47,9 @@
         return new Promise(resolve => setTimeout(resolve, ms));
       } 
       function search() {
+        document.getElementById("loadingMessage").style.display = "block";
         const api_key =
-          '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'
+          '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'
         const btn = document.getElementById('btn');
         btn.disabled = true;
         const names = document.getElementById('names').value;
@@ -58,10 +80,12 @@
                 .split('\n')
                 .join('<br/>')}</div>`
             })
+            document.getElementById("loadingMessage").style.display = "none";
             sleep(2000)
             btn.disabled = false;
           })
           .catch(function (error) {
+            document.getElementById("loadingMessage").style.display = "none";
             let resultDiv = document.getElementById('result')
             resultDiv.innerHTML = error
             sleep(2000)
