--- a/index.html
+++ b/index.html
@@ -22,9 +22,23 @@
       }
 
      body {
-        background-repeat: no-repeat;
-        background-image: url( "https://www.sjsori.com/news/photo/201911/40411_48341_3957.jpg" );
-        background-size: 300px 150px;
+        padding: 0;
+        margin: 0;
+        color: #fff;
+      }
+     .container {
+          background-image: url("https://www.sjsori.com/news/photo/201911/40411_48341_3957.jpg");
+          background-position: center 170px;
+          background-repeat: no-repeat;
+          background-size: 1800px 1000px;
+          height: 1000px; /* 컨테이너 높이 지정 */
+          background-color: black;
+          overflow: hidden;
+      }
+      .content {
+          padding-top: 0px;
+          position: relative;
+          z-index: 2;
       }
     </style>
   </head>
