--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="loader"></div>
     </div>
     <br /><br />
-    <div id="result"></div>
+    <div align=center id="result"></div>
     <script>
       function sleep(ms) {
         return new Promise(resolve => setTimeout(resolve, ms));
@@ -64,7 +64,7 @@
       function search() {
         document.getElementById("loadingMessage").style.display = "block";
         const api_key =
-          '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'
+          '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'
         const btn = document.getElementById('btn');
         btn.disabled = true;
         const names = document.getElementById('names').value;
