--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <body align=center>
     <div class="container">
         <div class="content">
-            <h1>닉 생 성 기</h1>
+            <h1>SASA 닉네임 생성기</h1>
     <label for="names">이름:</label>
     <input type="text" id="names" name="names" required />
     <br />
