--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
           headers: {
             Authorization: `Bearer ${api_key}`,
             'Content-Type': 'application/json',
+            'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36',
           }
         }
         const data = {
