--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>SASA 닉네임 생성기</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <style>
+      body {
+        padding: 0;
+        margin: 0;
+        color: #fff;
+      }
       .loader {
         border: 5px solid #f3f3f3;
         border-top: 5px solid #3498db;
@@ -20,24 +25,20 @@
           transform: rotate(360deg);
         }
       }
-      body {
-        padding: 0;
-        margin: 0;
-        color: #fff;
-      }
      .container {
-          background-image: url("https://www.sjsori.com/news/photo/201911/40411_48341_3957.jpg");
-          background-position: center 600px;
-          background-repeat: no-repeat;
-          background-size: 1700px 500px;
-          height: 1000px; /* 컨테이너 높이 지정 */
-          background-color: black;
-          overflow: hidden;
-      }
-      .content {
-          padding-top: 0px;
-          position: relative;
-          z-index: 2;
+          background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.8) 25%,
+            rgba(0, 0, 0, 0.5) 50%,
+            rgba(0, 0, 0, 0.2) 80%,
+            rgba(0, 0, 0, 0) 100%
+          ), url("https://www.sjsori.com/news/photo/201911/40411_48341_3957.jpg");
+          background-position: center;
+          background-size: 2800px, 1400px;
+          background-attachment: fixed;
+          height: 100vh;
+          min-height: 1000px;
+          width: auto;
       }
       /* 로딩 중 메시지 스타일 설정 */
       .loader {
@@ -114,20 +115,23 @@
         font-size: 2rem;
         text-align: center;
         margin-top: 50px;
+        background-color: transparent;
       }
-    </style>
     </style>
   </head>
   <body align=center>
     <div class="container">
         <div class="content">
             <h1>닉 생 성 기</h1>
+    <label for="api_key">API 키:</label>
+    <input type="text" id="api_key" name="api_key" required />
+    <br />
     <label for="names">이름:</label>
     <input type="text" id="names" name="names" required />
     <br />
     <label for="keywords">키워드:</label>
     <input type="text" id="keywords" name="keywords" required />
-    <button id="btn" onclick="search()">입력</button>
+    <button id="btn" onclick="search()">닉네임 생성!</button>
     <div id="loadingMessage" style="display: none;">
       <p>Wait a Second...</p>
       <div class="loader"></div>
@@ -139,16 +143,17 @@
         return new Promise(resolve => setTimeout(resolve, ms));
       } 
       function search() {
+        let resultDiv = document.getElementById('result')
+        resultDiv.innerHTML = ''
         document.getElementById("loadingMessage").style.display = "block";
-        const api_key =
-          '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'
+        const api_key = document.getElementById('api_key').value;
         const btn = document.getElementById('btn');
         btn.disabled = true;
         const names = document.getElementById('names').value;
         const keywords = document.getElementById('keywords').value;
         const messages = [
           { role: 'system', content: 'You are a helpful assistant.' },
-          { role: 'user', content: names + ', ' + keywords + '의 두 개 키워드로 웃긴 닉네임 생성해줘. 닉네임은 한 개의 긴, 수식어가 붙은 명사 형태면 좋겠어. 닉네임에 키워드가 모두 그대로 포함되어야 한다. 그리고 설명하려고 하지 말고 그냥 닉네임 한 개 그 자체만 출력해줘' },
+          { role: 'user', content: names + ', ' + keywords + '의 두 개 키워드로 웃기고 자극적인 닉네임 생성해줘. 닉네임은 한 개의 긴, 관련된 수식어 5개가 붙은 이름 형태면 좋겠어. 닉네임에 키워드가 모두 그대로 포함되어야 한다. 그리고 설명하려고 하지 말고 그냥 닉네임 자체 한 개만 출력해줘. 예를 들어 운동하고나서법을빨리먹고소화가잘안되어설사한제임스라는 닉네임이 있어.' },
         ]
         const config = {
           headers: {
@@ -165,8 +170,6 @@
         axios
           .post('https://api.openai.com/v1/chat/completions', data, config)
           .then(function (response) {
-            let resultDiv = document.getElementById('result')
-            resultDiv.innerHTML = ''
             response.data.choices.forEach(function (choice, index) {
               resultDiv.innerHTML += `<div>${choice.message.content
                 .split('\n')
@@ -178,7 +181,6 @@
           })
           .catch(function (error) {
             document.getElementById("loadingMessage").style.display = "none";
-            let resultDiv = document.getElementById('result')
             resultDiv.innerHTML = error
             sleep(2000)
             btn.disabled = false;
