--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <body align=center>
     <div class="container">
         <div class="content">
-            <h1>닉 생 성 기</h1>
+            <h1>SASA 닉네임 생성기</h1>
     <label for="api_key">API 키:</label>
     <input type="text" id="api_key" name="api_key" required />
     <br />
