--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         const keywords = document.getElementById('keywords').value;
         const messages = [
           { role: 'system', content: 'You are a helpful assistant.' },
-          { role: 'user', content: 'make nickname for ' + names + '. keywords for him/her are' + keywords + '. translate these keywords and make a nickname for him/her, then translate that in Korean. no whitespace is allowed for nickname, you must include two keywords in a nickname. print without any description, and just only one nickname. for example, if two keywords are "제임스", "설사" then print "운동하고나서밥을빨리먹고소화가잘안되어설사한제임스". do not tell anything and only output the nickname.' },
+          { role: 'user', content: 'make nickname for ' + names + '. keywords for him/her are' + keywords + '. translate these keywords and make a nickname for him/her then translate that in Korean. print only one nickname, which is translated. you should not print the original English words. no whitespace is allowed for nickname, you must include two keywords in a nickname. print without any description, and just only one nickname. for example, if two keywords are "제임스", "설사" then print "운동하고나서밥을빨리먹고소화가잘안되어설사한제임스". do not tell anything and only output the nickname.' },
         ]
         const config = {
           headers: {
