--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           background-position: center;
           background-size: 2800px, 1400px;
           background-attachment: fixed;
-          height: 100vh;
+          height: auto;
           min-height: 1000px;
-          width: auto;
+          width: 200vw;
       }
       /* 로딩 중 메시지 스타일 설정 */
       .loader {
