--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
             rgba(0, 0, 0, 0) 100%
           ), url("https://www.sjsori.com/news/photo/201911/40411_48341_3957.jpg");
           background-position: center;
-          background-size: 2800px, 1400px;
+          background-size: cover;
           background-attachment: fixed;
-          height: auto;
+          height: 100vh;
           min-height: 1000px;
-          width: 200vw;
       }
       /* 로딩 중 메시지 스타일 설정 */
       .loader {
